[package]
name = "rustpn"
author="frostzt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }  # Added features
tun-tap = "0.1.4"
aes-gcm = "0.10"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
bytes = "1"
rand = "0.8"
